Fix submitted overflow

--- a/src/app/components/submitted/submitted.component.css
+++ b/src/app/components/submitted/submitted.component.css
@@ -38,6 +38,7 @@
 
 .submission-info {
   flex: 1;
+  overflow: hidden;
 }
 
 .submission-title {
